# FMVita

./: .gitignore  CMakeLists.txt  README.md  adhoc_dialog.c  analyze_gif.py  archive.c  audioplayer.c  browser.c  browser.h  build.sh  buttons.c  buttons.h  check_diff.sh  check_git.sh  context_menu.c  context_menu.h  file.c  file.h  init.c  io_process.c  language.c  language.h  main.c  main.h  main_context.c  main_context.h  network_update.c  package_installer.c  package_installer.h  patch.py  photo.c  property_dialog.c  qr.c  run_verify.sh  scratch.py  settings.c  theme.c  theme.h  uncommon_dialog.c  uncommon_dialog.h  (+8 more)
VitaShell-master(thehero)/: CHANGELOG.md  CMakeLists.txt  README.md  _update_release.sh  audioplayer.c  browser.c  file.c  file.h  init.c  io_process.c  io_process.h  language.c  language.h  main.c  main.h  main_context.c  md5.c  md5.h  network_download.c  network_download.h  network_update.c  package_installer.c  pbp.c  pbp.h  qr.c  qr.h  refresh.c  settings.c  theme.c  theme.h  uncommon_dialog.c  usb.c  utils.c  utils.h  vitashell_config.h
VitaShell-master(thehero)/l10n/: bulgarian.txt  chinese_s.txt  chinese_t.txt  danish.txt  dutch.txt  french.txt  german.txt  greeklish.txt  hungarian.txt  italian.txt  japanese.txt  korean.txt  norwegian.txt  polish.txt  portuguese.txt  portuguese_br.txt  russian.txt  spanish.txt  swedish.txt  turkish.txt
VitaShell-master(thehero)/minizip/: ioapi.c
VitaShell-master(thehero)/modules/kernel/: CMakeLists.txt  exports.yml  main.c
VitaShell-master(thehero)/modules/patch/: CMakeLists.txt
VitaShell-master(thehero)/modules/usbdevice/: CMakeLists.txt
VitaShell-master(thehero)/modules/user/: CMakeLists.txt  exports.yml
VitaShell-master(thehero)/pkg/sce_sys/livearea/contents/: template.xml
VitaShell-master(thehero)/resources/: chinese_s.txt  chinese_t.txt  dutch.txt  english_us.txt  french.txt  german.txt  italian.txt  japanese.txt  korean.txt  portuguese.txt  russian.txt  spanish.txt
VitaShell-master(thehero)/resources/default/: colors.txt
audio/: vita_audio.c  vita_audio.h
l10n/: bulgarian.txt  chinese_s.txt  chinese_t.txt  danish.txt  dutch.txt  french.txt  german.txt  greeklish.txt  hungarian.txt  italian.txt  japanese.txt  korean.txt  norwegian.txt  polish.txt  portuguese.txt  portuguese_br.txt  russian.txt  spanish.txt  swedish.txt  turkish.txt
media/Media/: Ícones - Preto e branco.ai
modules/kernel/: CMakeLists.txt  main.c
modules/patch/: CMakeLists.txt
modules/usbdevice/: CMakeLists.txt
modules/user/: CMakeLists.txt
pkg/sce_sys/livearea/contents/: template.xml
resources/: chinese_s.txt  english_us.txt  theme.txt
resources/default/: colors.txt
resources/electron/: colors.txt
